@@ -1,0 +1,2 @@
+
+export const DATA_DIR = "./data";
